# mapquik

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: ecoli.genome.100k.fa  ecoli.genome.100k.fa.fai  ecoli.genome.fa.fai  nearperfect-ecoli.100.fa  pbsim-ecoli.10X.100k.fa  perfect-ecoli.10X.100k.fa  run_ecoli.sh  run_ecoli_full.sh  run_ecoli_self_full.sh  simulate_pbsim.sh  simulate_perfect.sh  simulate_perfect_mason.sh  simulate_perfect_pbsim.sh  wgsim_to_mapeval.py
example-ava/: run_ecoli_self_full.sh
example-map/: ecoli.genome.100k.fa  ecoli.genome.fa.fai  nearperfect-ecoli.10X.100k.fa  perfect-ecoli.10X.100k.fa  run_ecoli_100k.sh  run_ecoli_full.sh  simulate_perfect_mason.sh  simulate_perfect_wgsim.sh
experiments/: intersect_pafs.py  simulate_chm13.sh  simulate_maize.sh  table1.sh  variants.sh
experiments/chm13/: run_chm13_hifimap.sh  run_chm13_hifimap_minimap2.sh  run_chm13_hifimap_unmapped.sh  run_chm13_hifimap_winnowmap2.sh  run_chm13_mapquik.sh  run_chm13_mapquik_minimap2.sh  run_chm13_mapquik_unmapped.sh  run_chm13_mapquik_winnowmap2.sh  run_chm13_minimap2.sh  simulate_chm13.sh
experiments/figure-divergence/: divergence-analysis.ipynb
experiments/figure-divergence/.ipynb_checkpoints/: divergence-analysis-checkpoint.ipynb
experiments/figure-hit-count/: get_num_hits_per_read.py  get_q0_hitstats.sh  paper_plot.ipynb
experiments/figure-k-l/: d_perf.csv  get_mapstats.sh  get_mapstats_d.sh  get_mapstats_l.sh  k_perf.csv  kld-analysis-runtime.ipynb  kld-analysis.ipynb  l_perf.csv
experiments/figure-readlengths/: readlength-analysis.ipynb
experiments/figure-seeds/: 2DHisto-k10-d0.01-l31.hist2D  2DHisto-k12-d0.01-l31.hist2D  2DHisto-k15-d0.01-l31.hist2D  2DHisto-k2-d0.01-l31.hist2D  2DHisto-k20-d0.01-l31.hist2D  2DHisto-k4-d0.01-l31.hist2D  2DHisto-k6-d0.01-l31.hist2D  2DHisto-k8-d0.01-l31.hist2D  HG002-kminmer-abundance-in-CHM13v2-k10.50k.read_stats  HG002-kminmer-abundance-in-CHM13v2-k12.50k.read_stats  HG002-kminmer-abundance-in-CHM13v2-k15.50k.read_stats  HG002-kminmer-abundance-in-CHM13v2-k2.50k.read_stats  HG002-kminmer-abundance-in-CHM13v2-k20.50k.read_stats  HG002-kminmer-abundance-in-CHM13v2-k4.50k.read_stats  HG002-kminmer-abundance-in-CHM13v2-k6.50k.read_stats  HG002-kminmer-abundance-in-CHM13v2-k8.50k.read_stats  chm13v2.0-1001.histo  chm13v2.0-101.histo  chm13v2.0-101.histo2D  chm13v2.0-11.histo  chm13v2.0-11.histo2D  chm13v2.0-13.histo  chm13v2.0-13.histo2D  chm13v2.0-15.histo  chm13v2.0-15.histo2D  chm13v2.0-151.histo  chm13v2.0-151.histo2D  chm13v2.0-17.histo  chm13v2.0-17.histo2D  chm13v2.0-19.histo  chm13v2.0-19.histo2D  chm13v2.0-2001.histo  chm13v2.0-201.histo  chm13v2.0-201.histo2D  chm13v2.0-21.histo  chm13v2.0-21.histo2D  chm13v2.0-25.histo  chm13v2.0-25.histo2D  chm13v2.0-251.histo  chm13v2.0-251.histo2D  (+50 more)
experiments/figure-variants/: plot_intersect.ipynb
src/: align.rs  bit.rs  chain.rs  cigar.rs  closures.rs  graph.rs  hit.rs  index.rs  kmer.rs  kmer_vec.rs  kminmer.rs  kminmers.rs  kstrobes.rs  ksyncmers.rs  main.rs  match.rs  mers.rs  minimizers.rs  nthash_hpc.rs  paf_output.rs  read.rs  seq_output.rs  stats.rs  strobes.rs  utils.rs
utils/: get_accuracy.py
